--- a/deploy/k8s-standard/deployment.yaml
+++ b/deploy/k8s-standard/deployment.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
         - name: weather-app
           image: weather-app:1.0.0
+          imagePullPolicy: Never
           ports:
             - name: web
               containerPort: 8080
