--- a/deploy/k8s-serverless/app-infra/service.yaml
+++ b/deploy/k8s-serverless/app-infra/service.yaml
@@ -16,7 +16,7 @@ spec:
         autoscaling.knative.dev/target-utilization-percentage: "100"
     spec:
       containers:
-        - image: joergfa/weather-app:1.0.0
+        - image: ghcr.io/procceed-it/road-to-cloud-native:1.0.0
           env:
             - name: TARGET
               value: "Spring Boot Sample v1"
